# prisma-fmt-wasm

./: Cargo.toml  README.md  check.sh  datamodel-0.1.0.sha256sum  flake.nix  lib.rs  package.json
.github/workflows/: check-pr.yml  publish-prisma-fmt-wasm.yml  update-system-dependencies.yml
scripts/: build.sh  check.sh  syncWasmBindgenVersions.sh  updateDatamodelVersion.sh  updateLocks.sh  updateNpmPackageVersion.sh
src/: lib.rs
