[package]
name = "prisma-fmt-build"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.78"
wasm-logger = { version = "0.2.0", optional = true }
prisma-fmt = { git = "https://github.com/prisma/prisma-engines" }

[profile.release]
lto = true
